--- a/pages/loging.html
+++ b/pages/loging.html
@@ -9,7 +9,12 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
   <link rel="stylesheet" href="../css/style.css">
   <link rel="shortcut icon" href="../assets/icon/favicon-16x16.png" type="image/x-icon">
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,700;1,400&family=Shadows+Into+Light&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
   <title>Document</title>
 </head>
 
@@ -28,8 +33,9 @@
     </nav>
   </header>
   <div class="container">
-    <h2>Iniciar Sesión</h2><br>
-    <form>
+
+    <form class="iniciodesesion">
+      <h2>Inicio de Sesión</h2>
       <div class="form-group">
         <label for="email">Correo Electrónico:</label>
         <input type="email" class="form-control" id="email" placeholder="Ingresa tu correo electrónico">
@@ -40,7 +46,9 @@
       </div><br>
       <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
     </form>
+
   </div><br>
+
 
   <footer class="pie-pagina">
     <div class="grupo-1">
