agregue pagina ubicacion

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <ul class="nav-list">
                     <li><a href="./index.html">Inicio</a></li>
                     <li><a href="#go">Galería</a></li>
+                    <li><a href="./pages/ubicacion.html">Ubicacion</a></li>
                     <li><a href="./pages/contact.html">Contáctanos</a></li>
                     <li><a href="./pages/loging.html">Loging</a></li>
                 </ul>
