--- a/pages/loging.html
+++ b/pages/loging.html
@@ -15,7 +15,7 @@
     href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,700;1,400&family=Shadows+Into+Light&display=swap"
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
-  <title>Document</title>
+  <title>Loging</title>
 </head>
 
 <body>
@@ -27,8 +27,9 @@
       <ul class="nav-list">
         <li><a href="../index.html">Inicio</a></li>
         <li><a href="../index.html#go">Galería</a></li>
+        <li><a href="./ubicacion.html">Ubicacion</a></li>
         <li><a href="./contact.html">Contáctanos</a></li>
-        <li><a href="./pages/loging.html">Loging</a></li>
+        <li><a href="./loging.html">Loging</a></li>
       </ul>
     </nav>
   </header>
