--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,7 +5,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>clasescoder</title>
+    <title>Contacto</title>
     <meta name="theme-color" content="#dfddd1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/style.css">
@@ -28,6 +28,7 @@
             <ul class="nav-list">
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="../index.html#go">Galería</a></li>
+                <li><a href="./ubicacion.html">Ubicacion</a></li>
                 <li><a href="./contact.html">Contáctanos</a></li>
                 <li><a href="./loging.html">Loging</a></li>
             </ul>
