--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,10 +2,11 @@
 <html lang="es">
 
 <head>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
+    <meta name="description" content="formulario de contacto para reservar el arriendo de cabaña en la fecha dedseada">
+    <meta name="keywords" content="formulario, contacto, reserva, reservar, reservar cabaña, arriendos chile chico">
     <meta name="theme-color" content="#dfddd1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/style.css">
@@ -19,7 +20,7 @@
 </head>
 
 <body>
-
+    <!-- menu de navegacion -->
     <header>
         <img class="logo" src="../assets/img/logo.png" alt="Logo">
         <button id="abrir" class="abrir-menu"><i class="bi bi-list"></i></button>
@@ -34,9 +35,7 @@
             </ul>
         </nav>
     </header>
-
-
-
+    <!-- formulario de contacto -->
     <div class="caja">
         <div class="contacto">
             <div class="form-box">
@@ -61,7 +60,6 @@
                     <button type="submit">Enviar</button>
                 </form>
             </div>
-
         </div><br>
         <div class="mapa">
             <iframe
@@ -69,13 +67,11 @@
                 width="100%" height="100%" style="border-radius: 15px;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-
-
+        <!-- pie de pagina -->
     </div>
     <footer class="pie-pagina">
         <div class="grupo-1">
             <div class="box">
-
             </div>
             <div class="box">
                 <h2>SOBRE NOSOTROS</h2>
@@ -84,7 +80,6 @@
                     adipisicing elit. Odio vero nesciunt natus laboriosam velit voluptatem amet incidunt possimus
                     ratione
                     similique tenetur dolorum nobis quam impedit, eligendi dolor labore quas perferendis.</p>
-
             </div>
             <div class="box">
                 <h2>SIGUENOS</h2>
@@ -100,9 +95,8 @@
             <small>&copy; 2023 <b>Miguel-Diaz</b> - Todos los Derechos Reservados.</small>
         </div>
     </footer>
-
+    <!-- aqui vienen los script -->
     <script src="../js/main.js"></script>
-
 
 </body>
 
