--- a/pages/loging.html
+++ b/pages/loging.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Loging</title>
+  <meta name="description" content="pagina de inicio de sesion para arriendos de cabañas en chile chico">
+  <meta name="keywords" content="incio de sesion, arriendo de cabañas">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
@@ -15,10 +18,11 @@
     href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,700;1,400&family=Shadows+Into+Light&display=swap"
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
-  <title>Loging</title>
+
 </head>
 
 <body>
+  <!-- menu de navegacion -->
   <header>
     <img class="logo" src="../assets/img/logo.png" alt="Logo">
     <button id="abrir" class="abrir-menu"><i class="bi bi-list"></i></button>
@@ -33,8 +37,8 @@
       </ul>
     </nav>
   </header>
+  <!-- espacio para loguearse  -->
   <div class="container">
-
     <form class="iniciodesesion">
       <h2>Inicio de Sesión</h2>
       <div class="form-group">
@@ -49,19 +53,16 @@
     </form>
 
   </div><br>
-
-
+  <!-- pie de pagina  -->
   <footer class="pie-pagina">
     <div class="grupo-1">
       <div class="box">
-
       </div>
       <div class="box">
         <h2>SOBRE NOSOTROS</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa Lorem ipsum dolor sit amet consectetur,
           adipisicing elit. Odio vero nesciunt natus laboriosam velit voluptatem amet incidunt possimus ratione
           similique tenetur dolorum nobis quam impedit, eligendi dolor labore quas perferendis.</p>
-
       </div>
       <div class="box">
         <h2>SIGUENOS</h2>
@@ -78,6 +79,7 @@
     </div>
   </footer>
 
+  <!-- aqui vienen los script  tanto de bootstrap como el que cree en java-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
